monitoring/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: monitoring-ingress
  labels:
    app: monitoring
    namespace: monitoring
spec:
  ingressClassName: nginx
  rules:
  - host: prometheus.k8s.internal
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prometheus-service
            port:
              number: 9090
